[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  ".git",
  ".gitignore",
  ".*",
  "*.sh",
  "src/wfx_common_tools/connection/README.md",
  "src/wfx_common_tools/pta/README.md",
  "src/wfx_common_tools/test_feature/README.md",
  "src/wfx_common_tools/test_feature/certification.md",
  "*.xlsx",
  "*.png",
  "*.PNG",
  "*.jpg",
  "*.JPG",
]

[project]
name = "wfx_common_tools"
version = "0.0.2"
authors = [
  { name = "silabs-Marc", email = "marc.dorval@silabs.com"},
]

dependencies = [
  "paramiko>=2.7.1",
  "pyserial>=3.4",
  "ifaddr>=0.1.6",  
]

maintainers = [
  { name="silabs-tuD", email="tu.dao@silabs.com" },
  { name="silabs-JulienT", email="julien.tiron@silabs.com" },
]

description = "Silicon Laboratories WFx Wi-Fi tools for all supported platforms"
readme = "README.md"
requires-python = ">=3.9"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/SiliconLabs/wfx-common-tools"
Issues = "https://github.com/SiliconLabs/wfx-common-tools/issues"